Created a function "Run_RothC_All_NP" that does the same as "Run_RothC_All" but without creating plots, thus increasing efficiency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Merge_YCO2D)
 export(Merge_YCO2ND)
 export(Merge_YCT)
 export(Run_RothC_All)
+export(Run_RothC_All_NP)
 export(Run_RothC_VLC)
 export(Run_RothC_VLN)
 export(Run_RothC_VLR)
