--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,12 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/DrRufiSalis/RothCO2
 BugReports: https://github.com/DrRufiSalis/RothCO2/issues
+Imports:
+    SoilR,
+    dplyr,
+    ggplot2,
+    purrr,
+    qpcR,
+    readxl,
+    stringr,
+    writexl
